1.12.3:

2009-10-30  Murray Cumming  <murrayc@murrayc.com>

	List views and related records portals: Enough space for titles.

	* glom/utils_ui.[h|cc]: get_suitable_field_width_for_widget():
	Optionally calculate enough space for the title too, for TreeView 
	columns.
	* glom/utility_widgets/db_adddel/db_adddel.cc: treeview_append_column():
	When choosing a default column width, make sure there's enough for the 
	title too.

2009-10-30  Murray Cumming  <murrayc@murrayc.com>

	List views and related records portals: Avoid zero-width columns.

	* glom/utility_widgets/db_adddel/db_adddel.cc: treeview_append_column():
	Except on maemo, don't try to auto-expand a non-rightmost column, 
	because that does not seem to be possible with fixed-height-mode, 
	which we use for performance.

2009-10-30  David King  <davidk@openismus.com>

	* configure.ac:
	* glom/main.cc: Initialize libossomm on Maemo, to register a DBus
	service.

2009-10-28  David King  <davidk@openismus.com>

	* configure.ac:
	* Makefile.am:
	* glom.desktop.in.in:
	* glom.service.in: Add DBus service file for Maemo 5, and install to
	the correct location as determined by the osso-af-settings pkg-config
	file. Adjust the installation location of the glom.desktop file on
	Maemo.

2009-10-28  Murray Cumming  <murrayc@murrayc.com>

	Do not mark an empty string for translation.

	* glom/dialog_connection.cc: set_confirm_existing_user_note():
	Do not do _(""), fixing bug #599868 (André Klapper).

2009-10-27  Murray Cumming  <murrayc@murrayc.com>

	Trying to ignore unwanted column resize signals.

	* glom/utility_widgets/db_adddel/db_adddel.[h|cc]: 
	Removed unused set_column_width().
	construct_specified_columns_cellrenderer(): Added an InnerIgnore, though 
	we already use one in construct_specified_columns().
	on_treeview_column_resized(): Check if we should ignore signals.
	Do not cast an int size to a guint, because it could be -1.

2009-10-27  Murray Cumming  <murrayc@murrayc.com>
